force-app/main/default/objects/Inbox__c/Inbox__c.object-meta.xml
<CustomObject>
    <label>Inbox</label>
    <nameField>
        <displayFormat>INB-{000000}</displayFormat>
        <label>Inbox Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbox</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>