force-app/main/default/objects/Inbox__c/fields/External_Contact_Point__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Point__c</fullName>
    <externalId>true</externalId>
    <label>External Contact Point</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>