force-app/main/default/objects/Inbox__c/fields/Latest_Activity_Number__c.field-meta.xml
<CustomField>
    <fullName>Latest_Activity_Number__c</fullName>
    <label>Latest Activity Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>