force-app/main/default/objects/Inbox__c/fields/Latest_Message__c.field-meta.xml
<CustomField>
    <fullName>Latest_Message__c</fullName>
    <label>Latest Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>