force-app/main/default/objects/Inbox__c/fields/Latest_Message_Received_At__c.field-meta.xml
<CustomField>
    <fullName>Latest_Message_Received_At__c</fullName>
    <label>Latest Message Received At</label>
    <type>DateTime</type>
</CustomField>