force-app/main/default/objects/Inbox__c/fields/Unread_Activities__c.field-meta.xml
<CustomField>
    <fullName>Unread_Activities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unread Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>