force-app/main/default/objects/Inbox__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <label>WhatId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>