force-app/main/default/objects/Inbox__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Member_Name__c</columns>
    <columns>External_Phone__c</columns>
    <columns>External_Contact_Point__c</columns>
    <columns>Latest_Activity_Number__c</columns>
    <columns>Latest_Message_Received_At__c</columns>
    <columns>Unread_Activities__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>